--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Leren Spellen</title>
     <link rel="icon" href="./images/moon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/styles.css" rel="stylesheet">
+    <link href="./css/styles.scss" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;900&family=VT323&display=swap" rel="stylesheet">
@@ -34,4 +34,4 @@
 
 </body>
 
-</html> 
+</html>
