--- a/src/victory.html
+++ b/src/victory.html
@@ -6,17 +6,30 @@
     <title>Leren Spellen</title>
     <link rel="icon" href="./images/moon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/styles.css" rel="stylesheet">
+    <link href="./css/styles.scss" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;900&family=VT323&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <!-- <script type="module">
+        import { Level1 } from "./ts/level1"
+    </script>
+    <center>
+        <div class="frame1">
+            <h1>Leren Spellen</h1>
+        </div>
+        <div class="frame">
+            <div class="btn-group">
+                <button class="button" type="button" onclick="new Level1()"><h2>NEW GAME</h2></button><br>
+                 <button class="button" type="button"><h2>LOAD GAME</h2></button><br>
+            </div>
+        </div> -->
+    </center>
     <div id="container">
     </div>
-    <script type="module" src="./ts/Victory.ts"></script>
+    <script type="module" src="./ts/victory.ts"></script>
 
 </body>
 
