--- a/src/gameover.html
+++ b/src/gameover.html
@@ -15,9 +15,11 @@
 <body>
 
     <div id="container">
+        <script type="module" src="./ts/Gameover.ts"></script>
+
     </div>
-    <script type="module" src="./ts/Victory.ts"></script>
 
 </body>
 
 </html>
+<!-- Alles van Milan -->
