--- a/src/index.html
+++ b/src/index.html
@@ -13,21 +13,7 @@
 </head>
 
 <body>
-    <!-- <script type="module">
-        import { Level1 } from "./ts/level1"
-    </script>
-    <center>
-        <div class="frame1">
-            <h1>Leren Spellen</h1>
-        </div>
-        <div class="frame">
-            <div class="btn-group">
-                <button class="button" type="button" onclick="new Level1()"><h2>NEW GAME</h2></button><br>
-                <button class="button" type="button"><h2>LOAD GAME</h2></button><br>
-                <button class="button" type="button"><h2>TUTORIAL</h2></button>
-            </div>
-        </div> -->
-    </center>
+
     <div id="container">
     </div>
     <script type="module" src="./ts/Game.ts"></script>
@@ -35,3 +21,4 @@
 </body>
 
 </html>
+<!-- Alles van Milan -->
