--- a/src/game.html
+++ b/src/game.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Leren Spellen</title>
+    <title>Spelend Leren Spellen</title>
     <link rel="icon" href="./images/moon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/styles.scss" rel="stylesheet">
